--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,9 +12,10 @@
  *= require_tree .
  *= require font-awesome
 */
+
+
 html {
-	font-color: #3A4F48 !important;
-	font-family: 'Helvetica Neue', Arial, Helvetica, FreeSans, clean, sans-serif !important;
+	background: #3A4F48;
 }
 
 a.settingsbut, a.settingspop {
@@ -58,6 +59,7 @@ i.icon-calendar.icon-2x, i.icon-cogs.icon-2x{
 * {
 	margin: 0;
 	padding: 0;
+	font-family: 'Helvetica Neue', Arial, Helvetica, FreeSans, clean, sans-serif;
 }
 
 .accordion-heading {
@@ -338,9 +340,12 @@ ul.usersidebar{
 }
 
 ul.usersidebar li {
+	border-bottom: 1px solid black;
 	padding-left:2em;
 	padding-top:3px;
 	padding-bottom:3px;
+	max-height: 33px;
+	border-radius: 3px;
 }
 
 
@@ -377,6 +382,9 @@ ul.groupsidebar li, ul.hqsidebar li, ul.displaysidebar li, ul.functionsidebar li
 	padding-left:2em;
 	padding-top:3px;
 	padding-bottom:3px;
+	max-height: 33px;
+	border-radius: 3px;
+	border-bottom: 1px solid black;
 }
 
 
@@ -406,7 +414,7 @@ ul.groupsidebar a, ul.hqsidebar a, ul.displaysidebar a, ul.functionidebar a{
     padding: 9px;
     border-radius: 3px;
     display: inline-block;
-    position: relative;
+    position: absolute;
 }
 
 .usersidebarcheck:active, .usersidebarcheck:checked:active {
@@ -482,7 +490,8 @@ th{
 	background-color: #3A4F48;
 	position:relative;
 	z-index:10;
-	height:150px;
+	min-height: 100px;
+	clear:both;
 }
 
 a {
@@ -512,18 +521,22 @@ select {
 	display:inline-block;
 	vertical-align: top;
 	line-height: 50px;
-	margin-right:10px;
+	max-width: 40px;
 }
 
 #userimage img {
 	vertical-align: middle;
 	border-radius:3px;
+	min-height: 30px;
+	min-width:30px;
+	margin-bottom: 5px;
 	-webkit-box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
 	-moz-box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
 	box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
 }
 
 #username {
+	display: inline-block;
 	position:relative;
 	height:50px;
 	text-align:right;
@@ -544,7 +557,9 @@ select {
 	white-space: nowrap;
 }
 
-#loginlink {
+a#loginlink {
+	width:190px !important;
+	height:45px !important;
 	text-decoration: none;
 }
 
@@ -600,7 +615,11 @@ ul#setdropdown li#setmenudivide {
 	width:960px;
 	position:relative;
 	z-index:8;
-	min-height: 500px;
+	min-height: 600px;
+	border-radius: 3px;
+	-webkit-box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
+	-moz-box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
+	box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
 }
 /*
 .dropdown-menu {
@@ -614,20 +633,25 @@ ul#setdropdown li#setmenudivide {
 #signupinfo {
 	float:left;
 	width:610px; 
-	height:500px;
+	height:600px;
 	
 }
 
 #signup {
-	width:350px;
-	height:500px;
+	border-left: 2px solid #00AA72;
+	background-image: -webkit-linear-gradient(top, white, #e6e6e6);
+	-webkit-box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
+	-moz-box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
+	box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
+	width:348px;
+	height:600px;
 	float:left;
 	overflow:auto;
 }
 
 #signupparameters {
 	width:310px;
-	margin: 30px 40px 10px 10px;
+	margin: 50px 40px 10px 31px;
 }
 
 #signupparameters input[type=password],#signupparameters input[type=email] {
@@ -668,6 +692,7 @@ input#user_firstname {
 
 #signupparameters h1 {
 	color: black;
+	font-family: 'Helvetica Neue', Arial, Helvetica, FreeSans, sans-serif !important;
 }
 
 input.signupsubmit {
@@ -689,14 +714,15 @@ input.signupsubmit {
 #infomain {
 	width:510px;
 	height:200px;
-	margin: 30px 20px 10px 50px;
+	margin: 50px 20px 10px 50px;
 }
 
 #infomain p {
-	font-size: 50px;
+	font-size: 55px;
 	font-weight: normal;
 	line-height: 55px;
 	color: black;
+	font-family: 'Helvetica Neue', Arial, Helvetica, FreeSans, clean, sans-serif !important;
 }
 
 #infomain span {
@@ -708,7 +734,7 @@ input.signupsubmit {
 #infodetails {
 	width:510px;
 	height:220px;
-	margin: 10px 20px 10px 50px;
+	margin: 30px 20px 10px 50px;
 }
 
 #infodetails p {
@@ -736,13 +762,15 @@ table#infodeetstable td i{
 	margin: 0 5px 0 5px;
 }
 
-table#infodeetstable td p{
+table#infodeetstable td span{
 	text-align: left;
+	font-weight: bold;
+
 	margin: 0 5px 0 5px;
 }
 
 #infodivider {
-	margin-top:40px;
+	margin-top:70px;
 	width:550px;
 	margin-left: 25px;
 	border:1px solid #CCCCCC;
@@ -857,12 +885,144 @@ input#user_remember_me.signincheck {
 }
 
 #signinremember a {
-	margin-left: 30px;
+	margin-left: 42px;
 }
 
 #articles {
-	margin-top: 90px;
+	margin-top: 170px;
 	width:285px;
 	text-align: left;
 }
 
+#rdloginholder {
+	width:400px;
+	margin: 0 280px 0 280px;
+	padding-top:50px;
+	height: 550px;
+}
+
+#rdlogin {
+	border-radius: 3px;
+	
+	border: 1px solid #00AA72;
+	width:400px;
+	height:300px;
+	-webkit-box-shadow: 0 1px 3px 1px rgba(0,0,0,.25);
+	-moz-box-shadow: 0 1px 3px 1px rgba(0,0,0,.25);
+	box-shadow: 0 1px 3px 1px rgba(0,0,0,.25);
+}
+
+#rdlogh1 {
+	width:400px;
+	height:50px;
+	margin: 0;
+	padding: 0;
+	background: #00AA72;
+	background-image: -webkit-linear-gradient(#00C987,#00AA72);
+	border-radius: 3px;
+	text-align: left;
+	line-height: 50px;
+}
+
+#rdlogh1 h1{
+	color: white;
+	font-size: 20px;
+	margin: 0 0 0 20px;
+}
+
+#rdfields {
+	width:360px;
+	height:300px;
+	margin: 10px 20px 0 20px;
+}
+
+#rdfields #email, #rdfields #pw {
+	width:350px;
+	margin-top: 10px;
+}
+
+#flash_alert {
+	color:red;
+	font-size: 13px;
+	font-weight: bold;
+}
+
+#cb {
+	position: relative;
+	margin: 0 !important;
+	margin-left: 10px;
+	max-height: 3px;
+	max-width: 3px;
+	-webkit-appearance: none;
+	  background-color: #fafafa;
+    border: 1px solid #cacece;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    padding: 6px;
+    border-radius: 3px;
+}
+
+#rdfields label,#rdlines label {
+	display:inline-block;
+	position: relative;
+	bottom:0;
+	padding: 0;
+	line-height: 14px;
+	margin-left: 5px;
+}
+
+#rdlines {
+	vertical-align: bottom;
+	margin-top:10px;
+}
+
+#rdfields a, #rdlines a {
+	float:right;
+}
+
+#cb:checked:active {
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+ 
+#cb:checked {
+    background-color: #e9ecee;
+    border: 1px solid #adb8c0;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+    color: #99a1a7;
+}
+
+#cb:checked:after {
+    content: "\2714";
+    top:-1px;
+    left:2px;
+    position: absolute;
+    font-size: 10px;
+    color: #99a1a7;
+}
+
+.rdsubmit {
+	vertical-align: top;
+	width:60px !important;
+	height:30px;
+	background-image: -webkit-linear-gradient(top, #00E69A, #00AA72);
+	background-image: -moz-linear-gradient(top, #00E69A, #00AA72);
+	background-image: linear-gradient(top, #00E69A, #00AA72);
+	border-radius: 4px;
+	border:none;
+	color:white;
+	font-weight: bold;
+	font-size: 14px;
+}
+
+#modallog input {
+	margin-top: 10px;
+	width:355px;
+}
+
+.modal.fade.in {
+	top:15% !important;
+}
+
+.modal {
+	width:400px !important;
+	margin-left: -190px !important;
+}
