--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -20,4 +20,4 @@
 
 
 <%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Back', "/groups", :method => :get %>
