--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,8 +64,11 @@ i.icon-calendar.icon-2x, i.icon-cogs.icon-2x{
 
 .accordion-heading {
 	background-image: -webkit-linear-gradient(top, white, #e6e6e6);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(white), to(#e6e6e6));
 	background-image: -moz-linear-gradient(top, white, #e6e6e6);
-	background-image: linear-gradient(top, white, #e6e6e6);
+	background-image: linear-gradient(to bottom, white, #e6e6e6);
+	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
 	border-bottom:1px solid #00AA72 !important;
 	border-radius:3px;
 }
@@ -73,8 +76,11 @@ i.icon-calendar.icon-2x, i.icon-cogs.icon-2x{
 .accordion-heading:hover{
 	border-radius:3px;
 	background-image: -webkit-linear-gradient(top, #00E69A, #00AA72);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(#00E69A), to(#00AA72));
 	background-image: -moz-linear-gradient(top, #00E69A, #00AA72);
-	background-image: linear-gradient(top, #00E69A, #00AA72);
+	background-image: linear-gradient(to bottom, #00E69A, #00AA72);
+	background-image: -o-linear-gradient(top, #00E69A, #00AA72);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00E69A', endColorstr='#00AA72', GradientType=0);
 }
 
 .accordion-heading.active a{
@@ -84,8 +90,11 @@ i.icon-calendar.icon-2x, i.icon-cogs.icon-2x{
 .accordion-heading.active {
 	border-radius: 3px;
 	background-image: -webkit-linear-gradient(top, #00E69A, #00AA72);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(#00E69A), to(#00AA72));
 	background-image: -moz-linear-gradient(top, #00E69A, #00AA72);
-	background-image: linear-gradient(top, #00E69A, #00AA72);
+	background-image: linear-gradient(to bottom, #00E69A, #00AA72);
+	background-image: -o-linear-gradient(top, #00E69A, #00AA72);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00E69A', endColorstr='#00AA72', GradientType=0);
 }
 
 .accordion-heading a:hover {
@@ -123,8 +132,11 @@ div {
 #top {
 	position: fixed;
 	background-image: -webkit-linear-gradient(top, white, #e6e6e6);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(white), to(#e6e6e6));
 	background-image: -moz-linear-gradient(top, white, #e6e6e6);
-	background-image: linear-gradient(top, white, #e6e6e6);
+	background-image: linear-gradient(to bottom, white, #e6e6e6);
+	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
 	height: 50px;
 	z-index:9;
 	top: 0;
@@ -331,6 +343,11 @@ a#dLabel:hover{
 	z-index:8;
 	height:700px;
 	background-image: -webkit-linear-gradient(top, white, #e6e6e6);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(white), to(#e6e6e6));
+	background-image: -moz-linear-gradient(top, white, #e6e6e6);
+	background-image: linear-gradient(to bottom, white, #e6e6e6);
+	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
 	overflow:auto;
 }
 
@@ -641,6 +658,11 @@ ul#setdropdown li#setmenudivide {
 #signup {
 	border-left: 2px solid #00AA72;
 	background-image: -webkit-linear-gradient(top, white, #e6e6e6);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(white), to(#e6e6e6));
+	background-image: -moz-linear-gradient(top, white, #e6e6e6);
+	background-image: linear-gradient(to bottom, white, #e6e6e6);
+	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
 	-webkit-box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
 	-moz-box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
 	box-shadow: 0 2px 3px 1px rgba(0,0,0,.25);
@@ -702,8 +724,11 @@ input.signupsubmit {
 	width:285px !important;
 	height:40px;
 	background-image: -webkit-linear-gradient(top, #00E69A, #00AA72);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(#00E69A), to(#00AA72));
 	background-image: -moz-linear-gradient(top, #00E69A, #00AA72);
-	background-image: linear-gradient(top, #00E69A, #00AA72);
+	background-image: linear-gradient(to bottom, #00E69A, #00AA72);
+	background-image: -o-linear-gradient(top, #00E69A, #00AA72);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00E69A', endColorstr='#00AA72', GradientType=0);
 	border-radius: 4px;
 	border:none;
 	color:white;
@@ -812,8 +837,11 @@ input#user_password {
 	width:50px !important;
 	height:30px;
 	background-image: -webkit-linear-gradient(top, #00E69A, #00AA72);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(#00E69A), to(#00AA72));
 	background-image: -moz-linear-gradient(top, #00E69A, #00AA72);
-	background-image: linear-gradient(top, #00E69A, #00AA72);
+	background-image: linear-gradient(to bottom, #00E69A, #00AA72);
+	background-image: -o-linear-gradient(top, #00E69A, #00AA72);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00E69A', endColorstr='#00AA72', GradientType=0);
 	border-radius: 4px;
 	border:none;
 	color:white;
@@ -828,6 +856,13 @@ input[type=submit]:hover {
 	background-image: -webkit-linear-gradient(top, #00AA72, #00875B);
 	background-image: -moz-linear-gradient(top, #00AA72 #00875B);
 	background-image: linear-gradient(top, #00AA72, #00875B);
+
+	background-image: -webkit-linear-gradient(top, #00AA72, #00875B);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(#00AA72), to(#00875B));
+	background-image: -moz-linear-gradient(top, #00AA72, #00875B);
+	background-image: linear-gradient(to bottom, #00AA72, #00875B);
+	background-image: -o-linear-gradient(top, #00AA72,#00875B);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00AA72', endColorstr='#00875B', GradientType=0);
 }
 
 #signinremember {
@@ -907,7 +942,6 @@ input#user_remember_me.signincheck {
 
 #rdlogin {
 	border-radius: 3px;
-	
 	border: 1px solid #00AA72;
 	width:400px;
 	height:300px;
@@ -922,7 +956,12 @@ input#user_remember_me.signincheck {
 	margin: 0;
 	padding: 0;
 	background: #00AA72;
-	background-image: -webkit-linear-gradient(#00C987,#00AA72);
+	background-image: -webkit-linear-gradient(top, #00E69A, #00AA72);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(#00E69A), to(#00AA72));
+	background-image: -moz-linear-gradient(top, #00E69A, #00AA72);
+	background-image: linear-gradient(to bottom, #00E69A, #00AA72);
+	background-image: -o-linear-gradient(top, #00E69A, #00AA72);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00E69A', endColorstr='#00AA72', GradientType=0);
 	border-radius: 3px;
 	text-align: left;
 	line-height: 50px;
@@ -981,6 +1020,7 @@ input#user_remember_me.signincheck {
 
 #rdfields a, #rdlines a {
 	float:right;
+	font-size: 13px;
 }
 
 #cb:checked:active {
@@ -1008,9 +1048,12 @@ input#user_remember_me.signincheck {
 	width:60px !important;
 	height:30px;
 	background-image: -webkit-linear-gradient(top, #00E69A, #00AA72);
+	background-image: -webkit-gradient(linear,0 0 ,0 100%, from(#00E69A), to(#00AA72));
 	background-image: -moz-linear-gradient(top, #00E69A, #00AA72);
-	background-image: linear-gradient(top, #00E69A, #00AA72);
-	border-radius: 4px;
+	background-image: linear-gradient(to bottom, #00E69A, #00AA72);
+	background-image: -o-linear-gradient(top, #00E69A, #00AA72);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00E69A', endColorstr='#00AA72', GradientType=0);
+	border-radius: 3px;
 	border:none;
 	color:white;
 	font-weight: bold;
