--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -432,8 +432,8 @@ ul.groupsidebar a, ul.hqsidebar a, ul.displaysidebar a, ul.functionidebar a{
 
 
 .usersidebarcheck {
-	right:15px;
-	bottom:8px;
+	
+	bottom:15px;
 	float:right;
 	 -webkit-appearance: none;
 	  background-color: #fafafa;
@@ -1089,4 +1089,17 @@ input#user_remember_me.signincheck {
 	color:red;	
 	font-weight: bold;
 	margin-bottom: 10px;
+}
+
+#canvasgroup {
+	display: inline-block;
+}
+
+#canvasuser {
+	display: inline-block;
+}
+
+input[type="radio"].groupsidebarradio {
+	right: 20px;
+	position:absolute;
 }
